# contributor-qa-pipeline

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/db/: database.py
backend/app/models/: submission.py
backend/app/routes/: contributors.py  submissions.py
backend/app/services/: qa.py  storage.py
backend/tests/: test_qa.py
frontend/: .dockerignore  .gitignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Contributors.tsx  Dashboard.tsx  Submissions.tsx  Upload.tsx
