[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdullateef Alao",email = "aabdullateef557@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "anthropic (>=0.109.1,<0.110.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
