[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdullateef Alao",email = "aabdullateef557@gmail.com"}
]
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "anthropic (>=0.109.1,<0.110.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "groq (>=1.4.0,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "boto3 (>=1.43.29,<2.0.0)",
    "botocore (>=1.43.29,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
